--- a/quest.html
+++ b/quest.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <!-- QUESTION -->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>etherAxis</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
 
-        <script src="" async defer></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>etherAxis</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <script src="./script/cookie.js"></script>
+
+</head>
+
+<body>
+
+    <div class="container">
+        hello stranger
+
+    </div>
+    <script src="./script/dictio.js"></script>
+    <script src="app.js"></script>
+
+    <script async defer>
+        checkCookie()
+
+        let q = quests[checkCookie()]
+        for (let x = 0; x < 4; x++) {
+            console.log(x)
+            document.getElementsByClassName("container")[0].innerHTML += `<button onclick="choose(${x})">${q[x]}</button><br>`
+        }
+
+        function choose(x) {
+            localStorage.setItem(checkCookie(), x)
+            let change = checkCookie()
+            console.log(change++)
+            Cookies.set(change++, 'compass');
+            Cookies.remove(checkCookie())
+            routing();
+        }
+    </script>
+
+</body>
+
 </html>
