--- a/0.html
+++ b/0.html
@@ -49,7 +49,7 @@
 
         function getInputValue() {
             let inputVal = document.getElementById("input").value;
-            if (inputVal == 'cucchiaio di legno di fungo mi immergo') {
+            if (inputVal == 'immergo') {
                 Cookies.set(0, 'intermezzo');
                 $('#instruction').slideDown()
 
