--- a/quest.html
+++ b/quest.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="container">
-        hello stranger
+
 
     </div>
     <script src="./script/dictio.js"></script>
@@ -23,9 +23,10 @@
 
     <script async defer>
         checkCookie()
+        document.getElementsByClassName("container")[0].innerHTML += `<p>${qq[checkCookie()]}</p><br>`
 
         let q = quests[checkCookie()]
-        for (let x = 0; x < 4; x++) {
+        for (let x = 0; x < 2; x++) {
             console.log(x)
             document.getElementsByClassName("container")[0].innerHTML += `<button onclick="choose(${x})">${q[x]}</button><br>`
         }
@@ -34,7 +35,7 @@
             localStorage.setItem(checkCookie(), x)
             let change = checkCookie()
             console.log(change++)
-            Cookies.set(change++, 'compass');
+            Cookies.set(change++, 'compas');
             Cookies.remove(checkCookie())
             routing();
         }
