--- a/0.html
+++ b/0.html
@@ -28,7 +28,7 @@
         <button type="button" onclick="getInputValue();">check</button>
     </div>
 
-    <script src="./script/dictio.js"></script>
+    <script src="https://hub.xpub.nl/etheraxis/pad/p/dictio/export/txt"></script>
     <script src="./app.js"></script>
 
     <script>
@@ -52,7 +52,6 @@
             if (inputVal == 'immergo') {
                 Cookies.set(0, 'intermezzo');
                 $('#instruction').slideDown()
-
             }
         }
     </script>
