--- a/compas.html
+++ b/compas.html
@@ -9,6 +9,7 @@
     <title>etherAxis</title>
     <link rel="stylesheet" href="style.css">
     <script src="./script/cookie.js"></script>
+    <script src="./script/jquery-3.6.0.min.js"></script>
 
 </head>
 
@@ -22,19 +23,83 @@
             <div class="my-point"></div>
         </div>
         <button class="start-btn">Start compass</button>
+        <p id="nMap">On the map: </p>
     </div>
 
-    <button onclick="next()">Next</button>
+    <button class="glow" onclick="readme()">README</button>
+
+    <div id="riddle">
+        <p id="textRiddle"></p>
+        <input type="text" placeholder="Type " id="input">
+        <button id="button" type="button" onclick="getInputValue();">check</button>
+        <button id="button3" type="button" onclick="next();">I turned on the Bluetooth</button>
+        <button id="button4" type="button" onclick="back();">back to the compass</button>
+    </div>
+
+    <div id="narration">
+        <p id="text"></p>
+    </div>
+
+    <button onclick="riddle()">Riddle</button>
     <script src="./app.js"></script>
 
-    <script src="./script/dictio.js"></script>
+    <script src="https://hub.xpub.nl/etheraxis/pad/p/dictio/export/txt"></script>
     <script src="./script/compass_app.js"></script>
     <script>
+        var cookie = Cookies.get();
+        var key = Object.keys(cookie)[0];
+        document.getElementById("nMap").innerHTML += coord[key][2];
+
+        if (key == 3) {
+            $("#button").css("display", "none");
+            $("#button3").css("display", "block");
+            $("input").css("display", "none");
+            document.getElementById("textRiddle").innerHTML = rid[key];
+
+        } else if (key == 4) {
+            $("input").css("display", "none");
+            $("#button").css("display", "none");
+            $("#button3").css("display", "none");
+            $("#button4").css("display", "block");
+
+            for (let x = 0; x < 4; x++) {
+                let i = localStorage.getItem(x);
+                document.getElementById("textRiddle").innerHTML += i.toString()
+            }
+
+        } else {
+            document.getElementById("textRiddle").innerHTML = rid[key];
+            $("#button3").css("display", "none");
+            $("#button4").css("display", "none");
+        }
+
+        function getInputValue() {
+            let inputVal = document.getElementById("input").value;
+            if (inputVal == password[key]) {
+                Cookies.set(key, '');
+                routing();
+            }
+        }
+
+        function back() {
+            $("#riddle").slideUp();
+        }
+
+        function riddle() {
+            $("#riddle").slideDown();
+
+        }
+
         function next() {
-            let cookie = Cookies.get();
-            var key = Object.keys(cookie)[0];
             Cookies.set(key, '')
             routing()
+        }
+
+        function readme() {
+            $("#text").text(narration[key])
+            $("#narration").append("<button onclick='$(`#narration`).slideUp()'>Close</button>")
+            $("#narration").slideDown()
+            $(".glow").addClass("stopGlow")
         }
     </script>
 
