--- a/quest.html
+++ b/quest.html
@@ -18,7 +18,7 @@
 
 
     </div>
-    <script src="./script/dictio.js"></script>
+    <script src="https://hub.xpub.nl/etheraxis/pad/p/dictio/export/txt"></script>
     <script src="app.js"></script>
 
     <script async defer>
