--- a/3.html
+++ b/3.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+
+    <button id="connection" onclick="connectToBle()">Connect</button>
     <script src="./ble.js" defer async></script>
     <script src="app.js"></script>
     <script>
