--- a/compas.html
+++ b/compas.html
@@ -15,6 +15,8 @@
 
 <body>
 
+    <div class="bord"></div>
+
     <div class="container">
         <span id="x"></span>
         <div class="compass">
@@ -22,11 +24,12 @@
             <div class="compass-circle"></div>
             <div class="my-point"></div>
         </div>
-        <button class="start-btn">Start compass</button>
-        <p id="nMap">On the map: </p>
+        <button class="start-btn">Restart compass</button>
     </div>
 
+    <p id="nMap">On the map: </p>
     <button class="glow" onclick="readme()">README</button>
+
 
     <div id="riddle">
         <p id="textRiddle"></p>
