--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="style.css">
     <script src="./script/cookie.js"></script>
     <script src="./script/jquery-3.6.0.min.js"></script>
+    <!-- <style>
+        button {
+            position: absolute;
+            bottom: 1vh;
+        }
+    </style> -->
 </head>
 
 <body>
