--- a/gyro.html
+++ b/gyro.html
@@ -14,8 +14,8 @@
 <body>
 
     <div id="scene">
-        <div data-depth="0.2">My first Layer!</div>
-        <div data-depth="0.6">My second Layer!</div>
+        <div id="gyro1" data-depth="0.2"></div>
+        <div id="gyro2" data-depth="0.6"></div>
     </div>
 
     <script>
